# entres

./: CMakeLists.txt  learned-vs-non-learned  logger.py  mainpage.dox  manifest.xml  package.xml  salvatore.py  server.launch  table_game.py  test.py  test5-2.py  test5.py
models/: er-persists-actions-functional.mln  er-persists-actions-learned.mln
src/: client_test.py  entres_server.py
srv/: Infer.srv
train/: er-persists-actions-2.mln  er-persists-actions.mln  tbiupq_00001.db  tbiupq_00002.db  tbiupq_00003.db  tbiupq_00004.db  tbiupq_00005.db  tbiupq_00006.db  tbiupq_00007.db  tbiupq_00008.db  tbiupq_00009.db  tbiupq_00010.db  tbiupq_00011.db  tbiupq_00012.db  tbiupq_00013.db  tbiupq_00014.db  tbiupq_00015.db  tbiupq_00016.db  tbiupq_00017.db  tbiupq_00018.db  tbiupq_00019.db  tbiupq_00020.db  tbiupq_00021.db  tbiupq_00022.db  tbiupq_00023.db  tbiupq_00024.db  tbiupq_00025.db  tbiupq_00026.db  tbiupq_00027.db  tbiupq_00028.db  tbiupq_00029.db  tbiupq_00030.db  tbiupq_00031.db  tbiupq_00032.db  tbiupq_00033.db  tbiupq_00034.db  tbiupq_00035.db  tbiupq_00036.db  tbiupq_00037.db  tbiupq_00038.db  (+9964 more)
train2/: hffata_00001.db  hffata_00002.db  hffata_00003.db  hffata_00004.db  hffata_00005.db  hffata_00006.db  hffata_00007.db  hffata_00008.db  hffata_00009.db  hffata_00010.db  hffata_00011.db  hffata_00012.db  hffata_00013.db  hffata_00014.db  hffata_00015.db  hffata_00018.db  hffata_00019.db  hffata_00020.db  hffata_00021.db  hffata_00022.db  hffata_00023.db  hffata_00024.db  hffata_00025.db  hffata_00026.db  hffata_00027.db  hffata_00028.db  hffata_00029.db  (+9761 more)
(+19766 files in other folders)
